tests/valid/for.myth
fn main(): void {
    for x = 0; x < 10; x += 1 {
        println("for");
    }
}
