tests/invalid/for.myth
fn main(): void {
    for x = 0; x < 10 {
        println("for");
    }
}
